# encom-uefi

./: .gitignore  Cargo.toml  README.md  build.rs  test.sh  tron.sh
release/: encom-uefi.efi
src/: bios.txt  main.rs  tron.cast
